--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "prettier --write . && eslint --cache --fix .",
+    "clean": "rm -rf node_modules .next next-env.d.ts"
   },
   "dependencies": {
-    "@nextui-org/button": "2.0.18",
-    "@nextui-org/code": "2.0.16",
-    "@nextui-org/input": "2.1.6",
-    "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
     "@nextui-org/navbar": "2.0.19",
-    "@nextui-org/snippet": "2.0.22",
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
     "@nextui-org/theme": "2.1.6",
@@ -38,5 +34,14 @@
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sort-keys-custom-order": "^1.0.5",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.0.3"
   }
 }
